tests/pos/simple/variadic-01.ts

(function () 
 /*@ <anonymous> () => { void | true } */
 {

  assert(this.length > 0);

}).call([1,2,3]);
