tests/neg/objects/enum-01.ts

enum Operator {
  ADD,
  DIV,
  MUL,
  SUB
}


assert(Operator[Operator.ADD] === "SUB");

